# aml

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml
aml/: __init__.py  api.py
aml/common/: __init__.py  configurable.py  registry.py  scatter.py  sparse_utils.py  utils.py
aml/data/: __init__.py  data_structure.py  datapipes.py  dataset.py  dataset_.py  keys.py  neighbor_list.py  transforms.py  utils.py
aml/models/: __init__.py  base.py  ensemble.py  iap.py
aml/nn/: __init__.py  activation.py  cutoff.py  ensemble.py  grad.py  mlp.py  radial_basis.py  scale.py
aml/simulations/: __init__.py  ase_interface.py  bias.py  io.py  neighbors.py  simulation.py  space.py  temperature_strategy.py
aml/train/: __init__.py  callbacks.py  lightning_modules.py  loss.py  metrics.py  rich_utils.py  trainer.py
docs/: conf.py  guides.rst  index.rst  installation.rst  introduction.rst
docs/api_reference/: aml.rst  index.rst
docs/guides/: data.rst  models.rst
example/0_basics/: 01-basic-concepts.ipynb  02-training-with-trainer.ipynb  03-interface-with-ase.ipynb  config_schnet.yaml
example/1_molecular_dynamics/: run_md_nvt.py  water_md.xyz
example/3_monte_carlo/: README.md  config.yaml  train.py  validation.ipynb
example/configs/: config_all.yaml  config_ref.yaml
example/data/: Pt111_O_ads.db  water_test.traj  water_test.xyz  water_train.traj  water_train.xyz
scripts/: _utils.py  aml_md  aml_opt
tests/: conftest.py
tutorials/: 1-dealing-with-data.ipynb  2-making-dataset.ipynb  3-models-introduction.ipynb  4-training-model.ipynb  ccsd_t_dataset.py
(+127 files in other folders)
