[project]
name = "aml"
description = "Library for atomistic machine learning"
readme = "README.md"

requires-python = ">=3.10,<3.12"
license = { text = "MIT" }
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
  "numpy>=1.21.2",
  "scipy>=1.7.1",
  "sympy>=1.8",
  "matplotlib>=3.4.3",
  "ase>3.21.1",
  "torch>=2.0.0",
  "torchdata>=0.6.0",
  "torch-geometric>=2.3",
  "torch_sparse",
  "torch_scatter",
  "e3nn>=0.5.0",
  "pytorch-lightning>=2.0",
  "lightning>=2.0",
  "torch-ema",
  "wandb",
  "rich",
  "inflection",
  "tensorboard",
  "matscipy",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["flake8", "black", "isort", "jupyter", "pytest", "ruff"]

# [project.scripts]
# neural_iap = "neural_iap.cli.app:app"

[tool.setuptools.packages.find]
include = ["aml"]
exclude = ["dev"]

[tool.setuptools.dynamic]
version = { attr = "aml.__version__" }

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
select = ["W", "F", "E", "B", "I"]


[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
